init firebase and menu navigation

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,9 +38,29 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  blue: #527edb,
+  indigo: #6610f2,
+  purple: #a885d8,
+  pink: #ffb4e6,
+  red: #cd3c14,
+  orange: #f16e00,
+  yellow: #fc0,
+  green: #32c832,
+  teal: #50be87,
+  cyan: #4BB4E6,
+  white: #fff,
+  gray: #999,
+  gray-dark: #595959,
+  primary-alt: #f16e00,
+  secondary-alt: #000,
+  success: #32c832,
+  info: #4BB4E6,
+  warning: #fc0,
+  danger-alt: #cd3c14,
+  light-alt: #ddd,
+  dark-alt: #000,
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
