--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -7,5 +7,10 @@
             width: 100%;
             height: 100%;
         }
+        ion-icon {
+            color: map-get($colors, info);
+        }
     }
 }
+
+
